# GamePy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pytest.yml
gamepy/: game.py  test_game.py
gamepy/models/: __init__.py  calculate.py
