[tool.poetry]
name = "gamepy"
version = "0.1.0"
description = "Simple math game in portuguese"
license = "MIT"
authors = ["Edson Pimenta <edson.tibo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/eddyyxxyy/GamePy"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
blue = "^0.9.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
